# api

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml  go.sum  index.ts  marcustut.api  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: Dockerfile
api/etc/: marcustut-api.yaml
api/internal/config/: config.go
api/internal/handler/: routes.go  shorturlExpandHandler.go  shorturlShortenHandler.go
api/internal/logic/: shorturlExpandLogic.go
api/internal/svc/: serviceContext.go
app/: astro.config.mjs  package.json
app/src/pages/: finance.astro  index.astro
apps/app/: .eslintrc.json  package.json  tsconfig.json
apps/app/prisma/: schema.prisma  seed.ts
apps/app/prisma/data/: expenses.json  expenses_categories.json  incomes.json  incomes_categories.json
apps/app/src/pages/: _app.tsx  finance.tsx  index.tsx
apps/app/src/utils/: trpc.ts
apps/site/: astro.config.mjs  package.json  pnpm-lock.yaml
apps/site/src/components/: Navbar.astro
apps/site/src/layouts/: SiteLayout.astro
core/: .gitignore  Cargo.toml  package.json
core/prisma/: Cargo.toml  schema.prisma
core/src/: main.rs
core/src/repository/: expenses.rs  incomes.rs
db/migrations/: 000001_create_shorten_table.up.sql  000002_create_ama_users_table.down.sql  000002_create_ama_users_table.up.sql  000003_create_ama_questions_table.down.sql
go-api/: docker-compose.yml  go.mod  marcustut.api
go-api/api/: marcustut.go
go-api/db/migrations/: 000001_create_shorten_table.down.sql  000003_create_ama_questions_table.up.sql
go-api/rpc/model/: amaQuestionsModel_gen.go  schemaMigrationsModel.go  schemaMigrationsModel_gen.go  shortenModel.go  shortenModel_gen.go
go-api/rpc/shorturl/: Dockerfile
go-api/rpc/shorturl/transformer/: transformer.go
go-api/scripts/: postgres-backup.sh
rpc/ama/: ama.proto
rpc/model/: amaQuestionsModel.go  amaUsersModel.go  amaUsersModel_gen.go
rpc/shorturl/: Dockerfile  shorturl.go  shorturl.proto
rpc/shorturl/etc/: shorturl.yaml
rpc/shorturl/shorturl/: shorturl.pb.go  shorturl_grpc.pb.go
rust-api/: .gitignore  Cargo.toml
rust-api/src/: main.rs
rust-api/src/error/: mod.rs
rust-api/src/repository/: expenses.rs  incomes.rs  mod.rs
shorturl/: go.mod
shorturl/api/: shorturl.api
shorturl/rpc/: transform.go  transform.proto
shorturl/rpc/etc/: transform.yaml
shorturl/rpc/transformer/: transformer.go
(+21 files in other folders)
