[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.13", features = ["ws"] }
rspc = { version = "0.0.4", features = ["axum"] }
tokio = { version = "1.20.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
